                  http://drupal.org/user/761344
##########################################################################################
##### CHANGELOG.txt
##########################################################################################

CHANGELOG.txt to track changes to the Omega theme.

##########################################################################################
##### Current Release: 7.x-3.0-beta1
##### Pending changes for Next Release
########################################################################################## 

##########################################################################################
##### Changes in: 7.x-3.0-beta1
########################################################################################## 

6/09/12
=========
#1183482  - Increase the weight of the starterkits default stylesheets so they are able
to override the built-in Omega and Alpha stylesheets. Also setting the Alpha stylesheets
to a weight of -20.

#1184006  - Replaced the debugging blocks with simple markup elements. They have the same
functionality but come with less problems.

6/12/12
=========
#1184122  - The main page content block did not get placed properly by drupal_render_page.
We now anticipate that behavior in special cases where the user disabled the main page
content block in the blocks configuration and set it before drupal_render_page can break
it.

#1184144  - The default settings of the starterkits now activate the CSS files that each
starterkit ships with by default.

#1184546  - Merged the zone and region configuration tabs into one single tab and made
the zones and regions collapsible fieldsets.

6/14/12
=========
#1186924  - Added button to toggle debugging blocks on and off via JavaScript.

#1188422  - Delta templates can now use the debugging settings too.

#1188480  - The user-defined CSS classes for zones did not find their way into the HTML
output due to a typo in the zone preproccesor. This is now fixed.