@@ -1,15 +1,15 @@
-body.alpha-grid-debug .grid-1:hover, body.alpha-grid-debug .grid-2:hover, 
-body.alpha-grid-debug .grid-3:hover, body.alpha-grid-debug .grid-4:hover,
-body.alpha-grid-debug .grid-5:hover, body.alpha-grid-debug .grid-6:hover, 
-body.alpha-grid-debug .grid-7:hover, body.alpha-grid-debug .grid-8:hover,
-body.alpha-grid-debug .grid-9:hover, body.alpha-grid-debug .grid-10:hover, 
-body.alpha-grid-debug .grid-11:hover, body.alpha-grid-debug .grid-12:hover,
-body.alpha-grid-debug .grid-13:hover, body.alpha-grid-debug .grid-14:hover, 
-body.alpha-grid-debug .grid-15:hover, body.alpha-grid-debug .grid-16:hover,
-body.alpha-grid-debug .grid-17:hover, body.alpha-grid-debug .grid-18:hover, 
-body.alpha-grid-debug .grid-19:hover, body.alpha-grid-debug .grid-21:hover,
-body.alpha-grid-debug .grid-21:hover, body.alpha-grid-debug .grid-22:hover, 
-body.alpha-grid-debug .grid-23:hover, body.alpha-grid-debug .grid-24:hover {
+.alpha-grid-debug .grid-1:hover, .alpha-grid-debug .grid-2:hover, 
+.alpha-grid-debug .grid-3:hover, .alpha-grid-debug .grid-4:hover,
+.alpha-grid-debug .grid-5:hover, .alpha-grid-debug .grid-6:hover, 
+.alpha-grid-debug .grid-7:hover, .alpha-grid-debug .grid-8:hover,
+.alpha-grid-debug .grid-9:hover, .alpha-grid-debug .grid-10:hover, 
+.alpha-grid-debug .grid-11:hover, .alpha-grid-debug .grid-12:hover,
+.alpha-grid-debug .grid-13:hover, .alpha-grid-debug .grid-14:hover, 
+.alpha-grid-debug .grid-15:hover, .alpha-grid-debug .grid-16:hover,
+.alpha-grid-debug .grid-17:hover, .alpha-grid-debug .grid-18:hover, 
+.alpha-grid-debug .grid-19:hover, .alpha-grid-debug .grid-21:hover,
+.alpha-grid-debug .grid-21:hover, .alpha-grid-debug .grid-22:hover, 
+.alpha-grid-debug .grid-23:hover, .alpha-grid-debug .grid-24:hover {
   background-color: rgba(0, 115, 186, .2);
 }
 
@@ -76,23 +76,18 @@ body.alpha-grid-debug .grid-23:hover, body.alpha-grid-debug .grid-24:hover {
 }
 
 .alpha-grid-toggle {
-  background: url(../images/grid-toggle.png) no-repeat 0 0;
+  background: url(../images/grid-toggle.png) no-repeat 0 -22px;
   top: 80px;
 }
 
 .alpha-block-toggle {
-  background: url(../images/block-toggle.png) no-repeat 0 0;
+  background: url(../images/block-toggle.png) no-repeat 0 -22px;
   top: 110px;
 }
 
-.alpha-grid-toggle-active,
-.alpha-block-toggle-active {
+.alpha-grid-debug .alpha-grid-toggle,
+.alpha-region-debug .alpha-block-toggle {
   background-position: 0 0;
-}
-
-.alpha-grid-toggle-inactive,
-.alpha-block-toggle-inactive {
-  background-position: 0 -22px;
 }
 
 .alpha-grid-toggle:hover,
