@@ -91,6 +91,7 @@ settings[alpha_viewport_max_scale] = '1'
 settings[alpha_viewport_user_scaleable] = ''
 settings[alpha_libraries][omega_formalize] = 'omega_formalize'
 settings[alpha_libraries][omega_equalheights] = 'omega_equalheights'
+settings[alpha_libraries][omega_mediaqueries] = '0'
 settings[alpha_css][alpha-reset.css] = 'alpha-reset.css'
 settings[alpha_css][alpha-mobile.css] = 'alpha-mobile.css'
 settings[alpha_css][alpha-alpha.css] = 'alpha-alpha.css'
